--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"
       crossorigin
     ></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-router-dom/5.2.0/react-router-dom.min.js"></script>
+
     <link
       rel="stylesheet"
       href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"
@@ -22,9 +25,11 @@
     <div id="app"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.0/showdown.min.js"></script>
+    <script type="text/babel" src="./components/DataContext.js"></script>
+    <script type="text/babel" src="./components/Nav.js"></script>
     <script type="text/babel" src="./components/Home.js"></script>
+    <script type="text/babel" src="./components/Experience.js"></script>
     <script type="text/babel" src="./components/Education.js"></script>
     <script type="text/babel" src="./components/About.js"></script>
     <script type="text/babel" src="./app.js"></script>
